##############################################################################
# pgAdmin III - PostgreSQL Tools
# 
# Copyright (C) 2002 - 2009, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

EXTRA_DIST = \
	$(srcdir)/pgadmin3.spec \
	$(srcdir)/pgadmin3.spec.in
