##############################################################################
# pgAdmin III - PostgreSQL Tools
# 
# Copyright (C) 2002 - 2016, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

EXTRA_DIST = \
	$(srcdir)/build-tarball \
	$(srcdir)/build-tarball.in
