##############################################################################
# pgAdmin III - PostgreSQL Tools
# $Id: Makefile.am 4209 2005-05-18 11:23:14Z dpage $
# Copyright (C) 2002 - 2008, The pgAdmin Development Team
# This software is released under the Artistic Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

EXTRA_DIST = \
	$(srcdir)/pgadmin3.spec \
	$(srcdir)/pgadmin3.spec.in 
