##############################################################################
# pgAdmin III - PostgreSQL Tools
# $Id$
# Copyright (C) 2002 - 2005, The pgAdmin Development Team
# This software is released under the Artistic Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

EXTRA_DIST = \
	$(srcdir)/Make.bat \
	$(srcdir)/README.txt \
    $(srcdir)/resources/banner.bmp \
    $(srcdir)/resources/new.bmp \
    $(srcdir)/resources/up.bmp \
    $(srcdir)/resources/modify.ico \
    $(srcdir)/resources/remove.ico \
    $(srcdir)/resources/licence.rtf \
	$(srcdir)/src/i18ndata.wxs \
	$(srcdir)/src/i18nrefs.wxs \
	$(srcdir)/src/pgadmin3.wxs \
    $(srcdir)/src/ui.wxs \
    $(srcdir)/src/uidata.wxs \
    $(srcdir)/utils/RegenGuids.pl
