##############################################################################
# pgAdmin III - PostgreSQL Tools
# $Id: Makefile.am 4875 2006-01-06 21:06:46Z dpage $
# Copyright (C) 2002 - 2008, The pgAdmin Development Team
# This software is released under the Artistic Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

EXTRA_DIST = \
    $(srcdir)/Installer.vcproj \
    $(srcdir)/Make.bat \
    $(srcdir)/README.txt \
    $(srcdir)/upgrade.bat \
    $(srcdir)/resources/background.bmp \
    $(srcdir)/resources/banner.bmp \
    $(srcdir)/resources/help.ico \
    $(srcdir)/resources/licence.rtf \
    $(srcdir)/src/i18ndata.wxs \
    $(srcdir)/src/i18nrefs.wxs \
    $(srcdir)/src/pgadmin3.wxs \
    $(srcdir)/utils/RegenGuids.pl
