##############################################################################
# pgAdmin III - PostgreSQL Tools
# 
# Copyright (C) 2002 - 2016, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

EXTRA_DIST = \
    $(srcdir)/Installer.vcxproj \
    $(srcdir)/Installer.vcxproj.filters \
    $(srcdir)/Make.bat \
    $(srcdir)/README.txt \
    $(srcdir)/upgrade.bat \
    $(srcdir)/resources/background.bmp \
    $(srcdir)/resources/banner.bmp \
    $(srcdir)/resources/help.ico \
    $(srcdir)/resources/licence.rtf \
    $(srcdir)/src/i18ndata.wxs \
    $(srcdir)/src/i18nrefs.wxs \
    $(srcdir)/src/pgadmin3.wxs \
    $(srcdir)/utils/RegenGuids.pl
