##############################################################################
# pgAdmin III - PostgreSQL Tools
# $Id: Makefile.am 4974 2006-01-30 09:25:01Z dpage $
# Copyright (C) 2002 - 2010, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

SUBDIRS = lib bin test

EXTRA_DIST =

include $(srcdir)/doc/module.mk
include $(srcdir)/file/module.mk
