##############################################################################
# pgAdmin III - PostgreSQL Tools
# 
# Copyright (C) 2002 - 2009, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

SUBDIRS = lib bin test

EXTRA_DIST =

include $(srcdir)/doc/module.mk
include $(srcdir)/file/module.mk
