##############################################################################
# pgAdmin III - PostgreSQL Tools
# 
# Copyright (C) 2002 - 2009, The pgAdmin Development Team
# This software is released under the PostgreSQL Licence
#
# Makefile - Makefile for *nix systems
##############################################################################

bin_PROGRAMS = png2c

png2c_SOURCES = \
        $(srcdir)/png2c.c

EXTRA_DIST = \
	$(srcdir)/png2c.vcproj
